--- a/css/miniapp.css
+++ b/css/miniapp.css
@@ -7,7 +7,7 @@
 
       .cur_point_field {
             margin-top: 180px;
-            width: 190px;
+            width: 85%;
             height: 130px;
       }
       .cur_point_field > p {
