--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-      height: 80vh;
+      height: 620px;
       background-color: pink;
       width: 70vw;
       margin: 80px auto;
