--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-/*       height: 100vh; */
+      height: 100vh;
       background-image: linear-gradient(to right , 	pink,  #9f40bf);
 }
 
