--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ main {
       width: 70vw;
       margin: 90px auto;
       display: flex;
+      border-radius: 10px;
+      overflow: hidden;
       position: relative;
 }
 
